# dagster-mathias

./: .gitignore  README.md  dagster-mathias.code-workspace  dagster_cloud.yaml  pyproject.toml  setup.cfg  setup.py
.github/actions/setup-python-env.yaml/: action.yaml
.github/workflows/: branch_deployment.yaml  branch_deployments.yml  deploy.yaml  deploy.yml  pr.yaml
dagster_mathias/: __init__.py  assets.py  jobs.py
dagster_mathias/assets/: amsterdam_marathon.py
tests/: test_assets.py
utils/: env.py  slack.py
