[tool.poetry]
name = "dagster-mathias"
version = "0.1.0"
description = ""
authors = ["mattimoller <mathias@strise.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
dagster = "^1.7.3"
dagster-webserver = "^1.7.3"
setuptools = "^69.5.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
mypy = "^1.10.0"
types-setuptools = "^69.5.0.20240423"
coverage = "^7.5.0"
pytest = "^8.2.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.dagster]
module_name = "dagster_mathias"
